controller/pkg/agentgateway/translator/testdata/gateways/listenerset-refgrant.yaml
kind: Secret
apiVersion: v1
metadata:
  name: certificate
  namespace: gateway-conformance-web-backend
type: kubernetes.io/tls
data:
  ## Dummy key/cert is sufficient for our testing purposes
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJiakNDQVJPZ0F3SUJBZ0lVTFpDLzFkMEhpMlRFUGk5MUtwamVZbzgzZ1pBd0NnWUlLb1pJemowRUF3SXcKRERFS01BZ0dBMVVFQXd3QllUQWVGdzB5TlRFeE1qVXlNRFE0TURKYUZ3MHlOVEV4TWpZeU1EUTRNREphTUF3eApDakFJQmdOVkJBTU1BV0V3V1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVIvc1UybWRnbkhab2Z6CmR0b0tRZm5FMWdrVE9HY2JJaWFUeDdXUGpZcXF1c1p5ZWYybTBpbkgrcnJVRFBJY2tTRlQ5dnlzRVJFVTBKcGMKL3JTZmVVOG9vMU13VVRBZEJnTlZIUTRFRmdRVWdNQ01qYnRKZnQ2VjAyT1JWMzZQcmpBWWNPd3dId1lEVlIwagpCQmd3Rm9BVWdNQ01qY [...]
  tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxRblhESm5qZFRianhhV2NKQkJOK0FDVjh3UDRxR3RZdVA0VjdZSXdJdGRvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFZjdGTnBuWUp4MmFIODNiYUNrSDV4TllKRXpobkd5SW1rOGUxajQyS3Fyckdjbm45cHRJcAp4L3E2MUF6eUhKRWhVL2I4ckJFUkZOQ2FYUDYwbjNsUEtBPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listener-sets-test-reference-grant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: gateway-listener
      port: 443
      protocol: HTTPS
      hostname: "gateway-listener.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-for-gateway
  namespace: gateway-conformance-web-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-with-reference-grant
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listener-sets-test-reference-grant
    namespace: gateway-conformance-infra
  listeners:
    - name: listenerset-with-reference-grant-listener
      port: 443
      protocol: HTTPS
      hostname: "listenerset-with-reference-grant-listener.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-for-listener-set
  namespace: gateway-conformance-web-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Secret
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-listener-sets-test-reference-grant-ns
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-without-reference-grant
  namespace: gateway-api-listener-sets-test-reference-grant-ns
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listener-sets-test-reference-grant
    namespace: gateway-conformance-infra
  listeners:
    - name: listenerset-without-reference-grant-listener
      port: 443
      protocol: HTTPS
      hostname: "listenerset-without-reference-grant-listener-1.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend

---
# Output
output:
- gateway:
    Name: gateway-with-listener-sets-test-reference-grant
    Namespace: gateway-conformance-infra
  resource:
    bind:
      key: 443/gateway-conformance-infra/gateway-with-listener-sets-test-reference-grant
      port: 443
      protocol: TLS
- gateway:
    Name: gateway-with-listener-sets-test-reference-grant
    Namespace: gateway-conformance-infra
  resource:
    listener:
      bindKey: 443/gateway-conformance-infra/gateway-with-listener-sets-test-reference-grant
      hostname: listenerset-without-reference-grant-listener-1.com
      key: gateway-api-listener-sets-test-reference-grant-ns/listenerset-without-reference-grant.listenerset-without-reference-grant-listener
      name:
        gatewayName: gateway-with-listener-sets-test-reference-grant
        gatewayNamespace: gateway-conformance-infra
        listenerName: listenerset-without-reference-grant-listener
        listenerSet:
          name: listenerset-without-reference-grant
          namespace: gateway-api-listener-sets-test-reference-grant-ns
      protocol: HTTPS
      tls:
        cert: aW52YWxpZA==
        privateKey: aW52YWxpZA==
- gateway:
    Name: gateway-with-listener-sets-test-reference-grant
    Namespace: gateway-conformance-infra
  resource:
    listener:
      bindKey: 443/gateway-conformance-infra/gateway-with-listener-sets-test-reference-grant
      hostname: gateway-listener.com
      key: gateway-conformance-infra/gateway-with-listener-sets-test-reference-grant.gateway-listener
      name:
        gatewayName: gateway-with-listener-sets-test-reference-grant
        gatewayNamespace: gateway-conformance-infra
        listenerName: gateway-listener
      protocol: HTTPS
      tls:
        cert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJiakNDQVJPZ0F3SUJBZ0lVTFpDLzFkMEhpMlRFUGk5MUtwamVZbzgzZ1pBd0NnWUlLb1pJemowRUF3SXcKRERFS01BZ0dBMVVFQXd3QllUQWVGdzB5TlRFeE1qVXlNRFE0TURKYUZ3MHlOVEV4TWpZeU1EUTRNREphTUF3eApDakFJQmdOVkJBTU1BV0V3V1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVIvc1UybWRnbkhab2Z6CmR0b0tRZm5FMWdrVE9HY2JJaWFUeDdXUGpZcXF1c1p5ZWYybTBpbkgrcnJVRFBJY2tTRlQ5dnlzRVJFVTBKcGMKL3JTZmVVOG9vMU13VVRBZEJnTlZIUTRFRmdRVWdNQ01qYnRKZnQ2VjAyT1JWMzZQcmpBWWNPd3dId1lEVlIwagpCQmd3Rm9BVWdNQ0 [...]
        privateKey: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxRblhESm5qZFRianhhV2NKQkJOK0FDVjh3UDRxR3RZdVA0VjdZSXdJdGRvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFZjdGTnBuWUp4MmFIODNiYUNrSDV4TllKRXpobkd5SW1rOGUxajQyS3Fyckdjbm45cHRJcAp4L3E2MUF6eUhKRWhVL2I4ckJFUkZOQ2FYUDYwbjNsUEtBPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
- gateway:
    Name: gateway-with-listener-sets-test-reference-grant
    Namespace: gateway-conformance-infra
  resource:
    listener:
      bindKey: 443/gateway-conformance-infra/gateway-with-listener-sets-test-reference-grant
      hostname: listenerset-with-reference-grant-listener.com
      key: gateway-conformance-infra/listenerset-with-reference-grant.listenerset-with-reference-grant-listener
      name:
        gatewayName: gateway-with-listener-sets-test-reference-grant
        gatewayNamespace: gateway-conformance-infra
        listenerName: listenerset-with-reference-grant-listener
        listenerSet:
          name: listenerset-with-reference-grant
          namespace: gateway-conformance-infra
      protocol: HTTPS
      tls:
        cert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJiakNDQVJPZ0F3SUJBZ0lVTFpDLzFkMEhpMlRFUGk5MUtwamVZbzgzZ1pBd0NnWUlLb1pJemowRUF3SXcKRERFS01BZ0dBMVVFQXd3QllUQWVGdzB5TlRFeE1qVXlNRFE0TURKYUZ3MHlOVEV4TWpZeU1EUTRNREphTUF3eApDakFJQmdOVkJBTU1BV0V3V1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVIvc1UybWRnbkhab2Z6CmR0b0tRZm5FMWdrVE9HY2JJaWFUeDdXUGpZcXF1c1p5ZWYybTBpbkgrcnJVRFBJY2tTRlQ5dnlzRVJFVTBKcGMKL3JTZmVVOG9vMU13VVRBZEJnTlZIUTRFRmdRVWdNQ01qYnRKZnQ2VjAyT1JWMzZQcmpBWWNPd3dId1lEVlIwagpCQmd3Rm9BVWdNQ0 [...]
        privateKey: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxRblhESm5qZFRianhhV2NKQkJOK0FDVjh3UDRxR3RZdVA0VjdZSXdJdGRvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFZjdGTnBuWUp4MmFIODNiYUNrSDV4TllKRXpobkd5SW1rOGUxajQyS3Fyckdjbm45cHRJcAp4L3E2MUF6eUhKRWhVL2I4ckJFUkZOQ2FYUDYwbjNsUEtBPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-without-reference-grant
    namespace: gateway-api-listener-sets-test-reference-grant-ns
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: ""
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: fake
      message: ""
      reason: ListenersNotValid
      status: "False"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: certificateRef certificate/gateway-conformance-web-backend not accessible
          to a Gateway in namespace "gateway-api-listener-sets-test-reference-grant-ns"
          (missing a ReferenceGrant?)
        reason: ListenersNotValid
        status: "False"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: Bad TLS configuration
        reason: Invalid
        status: "False"
        type: Programmed
      - lastTransitionTime: fake
        message: certificateRef certificate/gateway-conformance-web-backend not accessible
          to a Gateway in namespace "gateway-api-listener-sets-test-reference-grant-ns"
          (missing a ReferenceGrant?)
        reason: RefNotPermitted
        status: "False"
        type: ResolvedRefs
      name: listenerset-without-reference-grant-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-with-reference-grant
    namespace: gateway-conformance-infra
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: Resource accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Resource programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: No errors found
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: listenerset-with-reference-grant-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-with-listener-sets-test-reference-grant
    namespace: gateway-conformance-infra
  spec: null
  status:
    attachedListenerSets: 1
    conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: No errors found
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: gateway-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
